[workspace]
members = [
    "core",
    "wasm"
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["@mekaem"]
repository = "https://github.com/v01dlabs/dollcode"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.dev]
opt-level = 0
debug = true
