[package]
name = "dollcode-wasm"
version.workspace = true
edition.workspace = true
license-file.workspace = true
authors.workspace = true
repository.workspace = true
description = "WebAssembly bindings for dollcode"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
dollcode = { path = "../core"}
heapless = "0.8.0"
wasm-bindgen = "0.2.95"

[dev-dependencies]
wasm-bindgen-test = "0.3.45"
